# librga

./: CHANGELOG.md  README.md
docs/: RGA_API_Instruction.md  RGA_FAQ.md  Rockchip_Developer_Guide_RGA_CN.md  Rockchip_Developer_Guide_RGA_EN.md  Rockchip_FAQ_RGA_CN.md  Rockchip_FAQ_RGA_EN.md
include/: GrallocOps.h  RgaUtils.h  drmrga.h  im2d.h  im2d_buffer.h  im2d_common.h  im2d_single.h  im2d_type.h  im2d_version.h  rga.h  version.h
samples/: README.md
samples/allocator_demo/src/: rga_allocator_1106_cma_demo.cpp  rga_allocator_dma32_demo.cpp  rga_allocator_dma_cache_demo.cpp  rga_allocator_dma_demo.cpp  rga_allocator_drm_demo.cpp  rga_allocator_drm_phy_demo.cpp  rga_allocator_graphicbuffer_demo.cpp  rga_allocator_malloc_demo.cpp
samples/alpha_demo/: Android.mk
samples/alpha_demo/src/: CMakeLists.txt  rga_alpha_3channel_demo.cpp  rga_alpha_colorkey_demo.cpp  rga_alpha_demo.cpp  rga_alpha_global_alpha_demo.cpp  rga_alpha_osd_demo.cpp  rga_alpha_yuv_demo.cpp
samples/async_demo/src/: rga_async_demo.cpp
samples/config_demo/src/: rga_config_single_core_demo.cpp  rga_config_thread_core_demo.cpp
samples/copy_demo/src/: CMakeLists.txt  rga_copy_demo.cpp  rga_copy_fbc_demo.cpp  rga_copy_splice_demo.cpp  rga_copy_splice_task_demo.cpp  rga_copy_tile8x8_demo.cpp
samples/crop_demo/src/: rga_crop_demo.cpp  rga_crop_rect_demo.cpp
samples/cvtcolor_demo/src/: CMakeLists.txt  rga_cvtcolor_csc_demo.cpp  rga_cvtcolor_demo.cpp  rga_cvtcolor_gray256_demo.cpp
samples/fill_demo/: CMakeLists.txt
samples/fill_demo/src/: rga_fill_demo.cpp  rga_fill_rectangle_array_demo.cpp  rga_fill_rectangle_demo.cpp  rga_fill_rectangle_task_array_demo.cpp  rga_fill_rectangle_task_demo.cpp
samples/gauss_demo/: cmake-linux-uclibc.sh
samples/gauss_demo/src/: CMakeLists.txt  rga_gauss_demo.cpp  rga_gauss_matrix_demo.cpp
samples/im2d_api_demo/: Android.mk  CMakeLists.txt  args.cpp  args.h  cmake-android.sh  cmake-linux.sh  readme.md  rgaImDemo.cpp
samples/mosaic_demo/src/: rga_mosaic_demo.cpp
samples/padding_demo/: CMakeLists.txt
samples/padding_demo/src/: rga_padding_demo.cpp
samples/resize_demo/src/: CMakeLists.txt  rga_resize_demo.cpp  rga_resize_rect_demo.cpp  rga_resize_uv_downsampling_demo.cpp
samples/rop_demo/src/: rga_rop_demo.cpp
samples/transform_demo/src/: rga_transform_flip_demo.cpp  rga_transform_rotate_demo.cpp  rga_transform_rotate_flip_demo.cpp
samples/utils/: CMakeLists.txt  utils.cpp
samples/utils/allocator/: CMakeLists.txt  dma_alloc.cpp  drm_alloc.cpp
toolchains/: toolchain_android_ndk.cmake  toolchain_linux.cmake  toolchain_linux_1106.cmake  toolchain_rt_thread.cmake
